<resources>
    <string name="app_name">Financial_accounting</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="ufor">For:</string>
    <string name="uon">On:</string>

    <string name="dfor">For</string>
    <string name="don">On</string>

    <string name="balance">Balance:</string>
    <string name="bal_on">Bal on:</string>
    <string name="bal_for">Bal for:</string>

    <string name="contracts">Contracts</string>
    <string name="cancel">cancel</string>
    <string name="add">Add</string>
    <string name="addaccount">Add Account</string>
    <string name="accountname">Account Name</string>
    <string name="amount">Amount</string>
    <string name="add_close">Add and close</string>
    <string name="phone">Phone</string>
    <string name="details">Details</string>
    <string name="name_too_short">Name is too short</string>
    <string name="delete">Delete</string>

</resources>
