<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="#BAECECEC"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="@color/colorAccent"
        android:contentDescription="@string/app_name"
        android:gravity="center"
        android:scaleType="center"
        android:text="@string/addaccount"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/count_bg"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:autofillHints="@string/accountname"
            android:gravity="center"
            android:hint="@string/accountname"
            android:inputType="textEmailAddress" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/count_bg"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/mAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:ems="10"
            android:gravity="center"
            android:hint="@string/amount"
            android:inputType="textPersonName|numberDecimal" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/count_bg"
        android:orientation="horizontal">

        <Button
            android:id="@+id/date"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="match_parent"
            android:layout_height="36dp"

            android:gravity="center"
            android:text="MM/DD/YYYY" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/count_bg"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/mPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="phone"
            android:autofillHints=""
            android:ems="10"
            android:gravity="center"
            android:hint="@string/phone"
            android:inputType="textPersonName|textPhonetic|phone" />
    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/count_bg"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/details"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="center"

            android:hint="@string/details"
            android:inputType="textMultiLine"
            android:importantForAutofill="no" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/controls"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/foron"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:layout_weight="5"
            android:orientation="horizontal">

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkedButton="@id/RBFor"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/RBOn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/colorUOn"
                    android:text="@string/don" />

                <RadioButton
                    android:id="@+id/RBFor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/colorUFor"
                    android:text="@string/dfor" />

            </RadioGroup>
        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="20">

            <ImageButton
                android:id="@+id/BSave"
                style="@android:style/Widget.DeviceDefault.Button.Borderless.Colored"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:clickable="true"
                android:contextClickable="true"
                android:scaleType="fitXY"
                android:tint="@color/colorPrimaryDark"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.666"
                app:srcCompat="@drawable/ic_save_black_24dp" />

            <ImageView
                android:id="@+id/BAdd"
                style="@android:style/Widget.DeviceDefault.Button.Borderless.Colored"
                android:layout_width="52dp"
                android:layout_height="50dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:backgroundTintMode="add"
                android:clickable="true"
                android:scaleType="fitXY"
                android:src="@drawable/add"
                android:tint="@color/colorPrimaryDark"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/BSave"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.571" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</LinearLayout>